# twitter_api

./: Cargo.toml
migrations/2024-03-24-154316_init/: down.sql  up.sql
src/: database.rs  main.rs  schema.rs
src/controlers/: client.rs  tweet.rs
src/middlewares/: log_middleware.rs  login_middleware.rs  mod.rs
src/models/: client.rs  mod.rs  tweet.rs
src/utils/: crypto_util.rs  mod.rs
