[package]
name = "twitter_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["uuid", "serde_json", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
diesel = { version = "2.1.0", features = [
    "r2d2",
    "postgres",
    "uuid",
    "chrono",
] }
diesel_json = "0.2.1"
